I updated the sagger documentation
